tests/baselines/reference/addMoreOverloadsToBaseSignature.errors.txt
tests/cases/compiler/addMoreOverloadsToBaseSignature.ts(5,11): error TS2429: Interface 'Bar' incorrectly extends interface 'Foo':
  Types of property 'f' are incompatible:
    Type '(key: string) => string' is not assignable to type '() => string'.


==== tests/cases/compiler/addMoreOverloadsToBaseSignature.ts (1 errors) ====
    interface Foo {
        f(): string;
    }
    
    interface Bar extends Foo {
              ~~~
!!! error TS2429: Interface 'Bar' incorrectly extends interface 'Foo':
!!! error TS2429:   Types of property 'f' are incompatible:
!!! error TS2429:     Type '(key: string) => string' is not assignable to type '() => string'.
        f(key: string): string;
    }
    